# mlops-fraud-stream

./: .gitignore  .pre-commit-config.yaml  README.md  doc.md  doc2.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.ps1
arquitectura/: .gitignore  ARCHITECTURE.md  pyproject.toml
arquitectura/src/: __init__.py
arquitectura/src/application/dto/: __init__.py
arquitectura/src/application/ports/inbound/: model_evaluator.py
arquitectura/src/application/ports/outbound/: metrics_tracker.py  model_repository.py  prediction_repository.py
arquitectura/src/application/use_cases/: __init__.py
arquitectura/src/domain/entities/: __init__.py  model_metadata.py  prediction.py  transaction.py
arquitectura/src/domain/exceptions/: __init__.py
arquitectura/src/domain/services/: __init__.py  fraud_detection_service.py
arquitectura/src/domain/value_objects/: __init__.py  amount.py  merchant_category.py
arquitectura/src/interfaces/: __init__.py
data/: .gitignore  PS_20174392719_1491204439457_log.csv.dvc
data/processed/: test_resampled.csv
docs/git-workflow/: git-workflow.md
experiments/baselines/: base_model.py  catboost_model.py  dashboard.py  data_drift_simulation.py  data_preprocessing.py  lightgbm_model.py  logistic_regression_model.py  metrics.json  random_forest_model.py  steps.py  xgboost_model.py
experiments/baselines/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
experiments/baselines/catboost_info/learn/: events.out.tfevents
experiments/baselines/data/processed/: test_resampled.csv
scripts/: generate_data.py  train_dummy.py
services/fraud-engine/src/fraud_engine/application/: __init__.py
services/fraud-engine/src/fraud_engine/application/ports/: __init__.py
services/fraud-engine/src/fraud_engine/application/ports/inbound/: __init__.py  fraud_detector.py  model_trainer.py
services/fraud-engine/src/fraud_engine/application/ports/outbound/: __init__.py  event_publisher.py  feature_store.py  label_stream.py  transaction_stream.py
services/fraud-engine/src/fraud_engine/domain/: __init__.py
services/fraud-engine/src/fraud_engine/domain/entities/: fraud_label.py
services/fraud-engine/src/fraud_engine/domain/events/: __init__.py
services/fraud-engine/src/fraud_engine/domain/exceptions/: domain_exceptions.py
services/fraud-engine/src/fraud_engine/domain/services/: incremental_learning_service.py  risk_scoring_service.py
services/fraud-engine/src/fraud_engine/domain/value_objects/: fraud_score.py  transaction_id.py
services/fraud-engine/src/fraud_engine/infrastructure/: __init__.py
services/fraud-engine/tests/unit/: test_river.py
services/fraud-engine/tests/unit/domain/: __init__.py
src/model_service/application/dto/: prediction_dto.py
src/model_service/application/services/: orchestrator.py
src/model_service/infrastructure/entrypoints/: api.py
