[project]
name = "mlops-fraud-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.0",
    "imbalanced-learn>=0.11.0",
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "streamlit>=1.30.0",
    "xgboost>=2.0.0",
]
