[project]
name = "mlops-base-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "mlflow>=2.11.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.6.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.4",
]
