[project]
name = "mlops-base-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.83",
    "fastapi>=0.110.0",
    "mlflow>=3.10.1",
    "prometheus-client>=0.20.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = []

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_service"]
