[tool.poetry]
name = "fraud-detection-system"
version = "0.1.0"
description = "Sistema de Detección de Fraude Financiero en Tiempo Real con Stream Learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# ML/Stream Learning
river = "^0.21.0"

# API Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Async Support
aiokafka = "^0.10.0"
aioredis = "^2.0.1"

# Database
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"

# Storage & Caching
redis = "^5.0.1"
boto3 = "^1.34.0"  # For S3/MinIO

# Serialization
cloudpickle = "^3.0.0"
avro-python3 = "^1.10.2"

# Observability
prometheus-client = "^0.19.0"

# Dependency Injection
dependency-injector = "^4.41.0"

# CLI
typer = {extras = ["all"], version = "^0.9.0"}

# Utils
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
testcontainers = "^3.7.1"

# Linting & Formatting
ruff = "^0.1.14"
black = "^24.1.0"
mypy = "^1.8.0"
isort = "^5.13.2"

# Type Stubs
types-redis = "^4.6.0"
types-python-dateutil = "^2.8.19"

[tool.poetry.group.feast.dependencies]
# Feature Store (optional for future)
feast = {version = "^0.35.0", optional = true}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "river.*",
    "aiokafka.*",
    "testcontainers.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
